infrastructure/kubernetes-dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "kubernetes.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - kind: Service
          name: kubernetes-dashboard-kong-proxy
          namespace: monitoring
          port: 443
